--- a/ARWords/Base.lproj/Main.storyboard
+++ b/ARWords/Base.lproj/Main.storyboard
@@ -33,15 +33,40 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kmZ-2s-PQb">
+                                <rect key="frame" x="168" y="511" width="38" height="33"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.5019411426380368" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="startRecording:" destination="jbJ-ox-1Ij" eventType="touchUpInside" id="xvT-fe-NhR"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h61-AA-c7g">
+                                <rect key="frame" x="20" y="20" width="39" height="30"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.50309144938650308" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Reset">
+                                    <color key="titleColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="resetARSession:" destination="jbJ-ox-1Ij" eventType="touchUpInside" id="zzZ-69-fLT"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="h61-AA-c7g" firstAttribute="leading" secondItem="t4c-CN-n7h" secondAttribute="leading" constant="20" id="IBZ-XQ-Fmd"/>
+                            <constraint firstItem="kmZ-2s-PQb" firstAttribute="centerX" secondItem="7wq-ig-ofV" secondAttribute="centerX" id="L2Y-3B-Z3f"/>
                             <constraint firstItem="LW7-fs-KAa" firstAttribute="leading" secondItem="t4c-CN-n7h" secondAttribute="leading" constant="15" id="NrC-eq-C00"/>
                             <constraint firstItem="Tml-P7-juv" firstAttribute="leading" secondItem="t4c-CN-n7h" secondAttribute="leading" id="T03-te-Avx"/>
+                            <constraint firstItem="LW7-fs-KAa" firstAttribute="top" secondItem="kmZ-2s-PQb" secondAttribute="bottom" constant="43" id="Tdv-9p-kd0"/>
                             <constraint firstItem="LW7-fs-KAa" firstAttribute="centerX" secondItem="7wq-ig-ofV" secondAttribute="centerX" id="Vmn-lr-RVf"/>
                             <constraint firstItem="lcC-sH-VKX" firstAttribute="centerX" secondItem="7wq-ig-ofV" secondAttribute="centerX" id="YIX-eZ-qpL"/>
                             <constraint firstItem="lcC-sH-VKX" firstAttribute="top" secondItem="t4c-CN-n7h" secondAttribute="top" constant="25" id="YhT-Ya-rmm"/>
                             <constraint firstItem="Tml-P7-juv" firstAttribute="top" secondItem="7wq-ig-ofV" secondAttribute="top" id="eBr-bv-KAd"/>
+                            <constraint firstItem="h61-AA-c7g" firstAttribute="top" secondItem="t4c-CN-n7h" secondAttribute="top" id="foZ-21-BFo"/>
                             <constraint firstItem="Tml-P7-juv" firstAttribute="bottom" secondItem="t4c-CN-n7h" secondAttribute="bottom" id="pwm-Se-eWR"/>
                             <constraint firstItem="t4c-CN-n7h" firstAttribute="bottom" secondItem="LW7-fs-KAa" secondAttribute="bottom" constant="50" id="t6u-xF-qBW"/>
                             <constraint firstItem="t4c-CN-n7h" firstAttribute="trailing" secondItem="LW7-fs-KAa" secondAttribute="trailing" constant="15" id="uIG-VD-qBW"/>
@@ -50,7 +75,9 @@
                         <viewLayoutGuide key="safeArea" id="t4c-CN-n7h"/>
                     </view>
                     <connections>
+                        <outlet property="resetBtn" destination="h61-AA-c7g" id="ZhT-8W-MrA"/>
                         <outlet property="sceneView" destination="Tml-P7-juv" id="HIW-f9-Pqo"/>
+                        <outlet property="startRecordBtn" destination="kmZ-2s-PQb" id="9Xg-yS-c88"/>
                         <outlet property="textInputTextField" destination="lcC-sH-VKX" id="hkp-uq-xIP"/>
                         <outlet property="textSizeSlider" destination="LW7-fs-KAa" id="kEa-Va-Lji"/>
                     </connections>
